
\name{NEWS}
\encoding{UTF-8}
\title{News for Package \pkg{inum}}

\section{Changes in version 1.0-0 (2017-12-12)}{
\itemize{
  \item{Allow multiple variables in \code{as.interval}.}
  \item{When \code{nmax} is smaller than the number of
        unique values, optionally use the means of the observations
        in each bin as level (and not the corresponding quantiles
        as in earlier version) to minimise bias.}
  }
}

\section{Changes in version 0.9-2 (2017-02-27)}{
\itemize{
  \item{Introduce \code{is.na} methods.}
}
}

\section{Changes in version 0.9-1 (2017-02-01)}{
\itemize{
  \item{Make sure all NAs are coded as 0.}
}
}


\section{Changes in version 0.9-0 (2016-12-09)}{
\itemize{
  \item{ \pkg{inum} published on CRAN.}
}
}