@@ -1,12 +1,14 @@
-ae8faa105605a52cc6cf74b412114889 *DESCRIPTION
+4ee311dc3152f0490428c0f1d5378a97 *DESCRIPTION
 328d1e76276ad8a4019e5a1746cd5e6a *NAMESPACE
 7ceb471fb19e5b0645ecf0bf34222feb *R/enum.R
 dd22dd4311f59d57ffc0b7b6cc98b62b *R/interval.R
-19bc8067f78f16927b3eae9eb626321f *R/inum.R
+9c72b509b536493cbaeb89b8b71e7aaf *R/inum.R
 339c2c619522533780dc2ab641fef27d *cleanup
-dcc0e9c1f0566e288bf419a848bdd1d0 *inst/NEWS.Rd
+b0e8a3bcc544c0fabd2c762af9f784d1 *inst/NEWS.Rd
 26c4e331027b064acf4b32ab14b2acdd *man/enum.Rd
 060c4485f8a056cc3908272e5a3100c3 *man/interval.Rd
 be4783f35d143567f86120f7048ac0be *man/inum.Rd
-04f38b05d5163e965492b8617f9aaf94 *tests/regtest.R
-eaf6c6cfa12350ddd1ea8b613afe1d87 *tests/regtest.Rout.save
+508358c0c5672703530baef9eb0bcb06 *tests/bugfixes.R
+0e76dd9e4e34fedfee9021ff996c044d *tests/bugfixes.Rout.save
+0cee5abe8427209bc56357c87a9fb435 *tests/regtest.R
+c3122b5f13202aab443a0dbb44d62151 *tests/regtest.Rout.save
