@@ -1,0 +1,36 @@
+
+R Under development (unstable) (2019-04-23 r76417) -- "Unsuffered Consequences"
+Copyright (C) 2019 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> 
+> library("inum")
+> 
+> ### there was a warning; reported by Fabian Scheipl
+> x <- 1:2 + .1
+> inum(data.frame(x = x))
+$x
+[1] 1.1 2.1
+Levels: 1.1 2.1
+
+attr(,"class")
+[1] "inum"
+> 
+> 
+> 
+> 
+> proc.time()
+   user  system elapsed 
+  0.268   0.044   0.309 
