@@ -1,6 +1,6 @@
 
-R version 3.4.2 (2017-09-28) -- "Short Summer"
-Copyright (C) 2017 The R Foundation for Statistical Computing
+R version 3.5.3 (2019-03-11) -- "Great Truth"
+Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -18,6 +18,7 @@ Type 'q()' to quit R.
 > 
 > library("inum")
 > data("iris")
+> suppressWarnings(RNGversion("3.5.3"))
 > set.seed(29)
 > 
 > iris[3, "Sepal.Width"] <- NA
@@ -320,4 +321,4 @@ ix
 > 
 > proc.time()
    user  system elapsed 
-  0.320   0.024   0.342 
+  0.146   0.017   0.156 
